# FVN-xphost.github.io

./: .gitignore  CONTRIBUTOR.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/workflows/: build.yml
BackGroundMusic/: Chengdu.py  README.md  example.py  theme_for_me.py
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  util.rs
src/components/board/: MyBlackBoard.svelte  MyBlackBoard.ts  MyGalleryBoard.svelte  MyMessageBox.ts
src/components/input/: MyMenuButton.svelte  MyMenuButton.ts
src/routes/: +page.svelte
src/routes/gallery/: +page.svelte
src/routes/gallery/[some]/: +page.svelte
src/routes/saves/: +page.svelte
src/routes/saves/[some]/: +page.svelte  +page.svelte.bak  MyInputName.svelte  MyInputName.ts
src/store/: dialog.ts  dialog2.ts  store.ts  仙人对话2.ts
src/style/: index.css
src/utils/: all.ts  backend-local.ts  backend-tauri.ts  messagebox.ts
