[package]
name = "spaceport"
version = "0.1.0"
description = "A Furry Visual Noval"
authors = ["xphost"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spaceport_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tempfile = "=3.24.0"
async-lock = "=3.4.1"
deranged = "=0.5.5"
dlopen2 = "=0.8.0"
dlopen2_derive = "=0.4.1"
getrandom = "=0.3.4"
time = "=0.3.45"
wasip2 = "=1.0.1"
wasip3 = "=0.3.1"
wit-bindgen = "=0.49.0"
wit-bindgen-core = "=0.49.0"
wit-bindgen-rust = "=0.49.0"
zbus = "=5.12.0"
zvariant = "=5.8.0"
zvariant_derive = "=5.8.0"
zvariant_utils = "=3.2.1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0", features = ["bundled"] } # Rust SQLite wrapper!
